manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-container
        image: us-central1-docker.pkg.dev/kayuze1st/test-app/test-app/latest:latest
        ports:
        - containerPort: 80
